# learning-gpu-parallel

./: CMakeLists.txt  README.md
src/: kernel.cu  kernel.cuh  main.cu
